tests/NormalTests/paczka1/small_fuzzy/98426718.err
Error in line 2: BpVp6pl A684 81,1
Error in line 3: Na8Z A684 16,3
Error in line 9: A488 S838 6,2
